fix: improved wrapping rules for ProfileExplorer

--- a/plugins/plugin-codeflare/web/scss/components/ProfileExplorer/_index.scss
+++ b/plugins/plugin-codeflare/web/scss/components/ProfileExplorer/_index.scss
@@ -64,7 +64,7 @@ body[kui-theme-style="dark"] {
 
   /** Handle tree text that isn't normally wrappable, such as long kubernetes contexts */
   .pf-c-tree-view__node-text {
-    word-break: break-all;
+    overflow-wrap: anywhere; /** WARNING: does not work on safari; we'll need the junkier word-break: break-all there */
   }
 
   /** width management */
@@ -98,6 +98,9 @@ body[kui-theme-style="dark"] {
   .pf-c-tree-view__content {
     /* so that action items align top */
     align-items: flex-start;
+
+    /* Hmm... not sure what's going on here. Nested ChipGroups can result in horizontal overflow that isn't necessary. */
+    flex-wrap: wrap;
   }
 
   .pf-c-tree-view__node-text {
